Details
-
Bug
-
Resolution: Fixed
-
P4
-
hs15, 9
-
b103
-
generic
-
generic
Description
Running a 32-bit x86 build with -XX:+Use486InstrsOnly aborts the VM:
$ gamma -XX:+Use486InstrsOnly -XX:+PrintMiscellaneous -XX:+Verbose -version
VM option '+Use486InstrsOnly'
VM option '+PrintMiscellaneous'
VM option '+Verbose'
[SafePoint Polling address: 0xfd7d0000]
[Memory Serialize Page address: 0xfd6c0000]
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/vm_version_x86_32.hpp:312
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/export/home/twisti/hotspot-comp/hotspot/src/cpu/x86/vm/vm_version_x86_32.hpp:312), pid=8233, tid=1
# Error: assert(_cpuid_info.std_cpuid1_rax.bits.family != 0,"VM_Version not initialized")
#
# JRE version: 7.0-b47
# Java VM: OpenJDK Server VM (15.0-b01-internal-jvmg mixed mode solaris-x86 )
# An error report file with more information is saved as:
# /export/home/twisti/hotspot-comp/hotspot/hs_err_pid8233.log
#
# If you would like to submit a bug report, please visit:
# http://java.sun.com/webapps/bugreport/crash.jsp
#
Current thread is 1
Dumping core ...
Abort
$ gamma -XX:+Use486InstrsOnly -XX:+PrintMiscellaneous -XX:+Verbose -version
VM option '+Use486InstrsOnly'
VM option '+PrintMiscellaneous'
VM option '+Verbose'
[SafePoint Polling address: 0xfd7d0000]
[Memory Serialize Page address: 0xfd6c0000]
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/vm_version_x86_32.hpp:312
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/export/home/twisti/hotspot-comp/hotspot/src/cpu/x86/vm/vm_version_x86_32.hpp:312), pid=8233, tid=1
# Error: assert(_cpuid_info.std_cpuid1_rax.bits.family != 0,"VM_Version not initialized")
#
# JRE version: 7.0-b47
# Java VM: OpenJDK Server VM (15.0-b01-internal-jvmg mixed mode solaris-x86 )
# An error report file with more information is saved as:
# /export/home/twisti/hotspot-comp/hotspot/hs_err_pid8233.log
#
# If you would like to submit a bug report, please visit:
# http://java.sun.com/webapps/bugreport/crash.jsp
#
Current thread is 1
Dumping core ...
Abort