6808665: Use486InstrsOnly aborts 32-bit VM

The code supporting -XX:+/-Use486InstrsOnly was removed.

Reviewed-by: dholmes, thartmann, vlivanov